--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@AleAmla987/styled-qr-code-omaly",
+  "name": "@omaly/styled-qr-code-node",
   "version": "1.5.1",
   "description": "Add a style and an image to your QR code",
   "files": [
@@ -59,5 +59,7 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/omaly/styled-qr-code/issues"
-  }
+  },
+  "publishConfig":{
+    "registry": "https://npm.pkg.github.com/"}
 }
