--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-//registry.npmjs.org/:_authToken=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
-//npm.pkg.github.com/:_authToken=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
-@AleAmla987:registry=https://npm.pkg.github.com
+@aleamla987:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=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
